--- a/site/index.html
+++ b/site/index.html
@@ -9,14 +9,39 @@
 </head>
 <body>
     <header>
-        <h1>Leonardo William Lopes</h1>
-        <p id="contato">contato</p>
+        <div>
+            <h1>Leonardo William Lopes</h1>
+            <hr>
+        </div>
         
-
     </header>
     <section>
         <div>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et tempora doloremque laudantium sed voluptates cupiditate exercitationem, accusantium error ratione dolor illo doloribus, ut quis ex fugiat iure corporis, ullam dicta.</p>
+            <h1>
+                Sobre min
+            </h1>
+            <p>
+                Olá! Meu nome é <strong>Leonardo William Lopes</strong> tenho 17 anos e móro em <a href="https://www.google.com/maps/place/Serrana+-+SP,+14150-000/@-21.2142083,-47.6730363,12z/data=!3m1!4b1!4m5!3m4!1s0x94b9daad84e615f1:0xf673853af833cf2e!8m2!3d-21.2062903!4d-47.6021095" target="_blank" rel="external">Serrana - SP</a>.
+            </p>
+            <p>
+                Atualmente em 2021 estou cursando o ensino medio integrado ao curso tecnico de <em>Eletrotecnica</em> na <em>ETEC José Martimiano da Silva</em>, e nas horas vagas estudo <strong>desenvolvimento web</strong> por conta propria!
+            </p>
+            <hr>
+        </div>
+        <div id="div_tecnologias">
+            <h1 id="tecnologias_title">
+                Tecnologias
+            </h1>
+            <p id="tecnologias_">
+                Em meus estudos me deparei com diversas tecnologias,sendo algumas delas:
+            </p>
+            <p>
+                <img src="img/logo_html.png" alt="logo html5">
+                <img src="img/logo_css.png" alt="logo css3">
+                <img src="img/logo_javascript.png" alt="logo logo_javascript">
+                <img src="img/logo_python.png" alt="logo python">
+                <img src="img/logo_cplus.png" alt="logo c++">
+            </p>
         </div>
     </section>
     <script src="script.js"></script>
