--- a/site/index.html
+++ b/site/index.html
@@ -16,31 +16,37 @@
         
     </header>
     <section>
-        <div>
-            <h1>
-                Sobre min
-            </h1>
-            <p>
-                Olá! Meu nome é <strong>Leonardo William Lopes</strong> tenho 17 anos e móro em <a href="https://www.google.com/maps/place/Serrana+-+SP,+14150-000/@-21.2142083,-47.6730363,12z/data=!3m1!4b1!4m5!3m4!1s0x94b9daad84e615f1:0xf673853af833cf2e!8m2!3d-21.2062903!4d-47.6021095" target="_blank" rel="external">Serrana - SP</a>.
-            </p>
-            <p>
-                Atualmente em 2021 estou cursando o ensino medio integrado ao curso tecnico de <em>Eletrotecnica</em> na <em>ETEC José Martimiano da Silva</em>, e nas horas vagas estudo <strong>desenvolvimento web</strong> por conta propria!
-            </p>
-            <hr>
+        <div id="sobre">
+            <div id="sobre-texto">
+                <h1>
+                    Sobre min
+                </h1>
+                <p>
+                    Olá! Meu nome é <strong>Leonardo William Lopes</strong> tenho 17 anos e moro em <a href="https://www.google.com/maps/place/Serrana+-+SP,+14150-000/@-21.2142083,-47.6730363,12z/data=!3m1!4b1!4m5!3m4!1s0x94b9daad84e615f1:0xf673853af833cf2e!8m2!3d-21.2062903!4d-47.6021095" target="_blank" rel="external">Serrana - SP</a>.
+                </p>
+                <p>
+                    Atualmente em 2021 estou cursando o ensino médio integrado ao curso técnico de <em>Eletrotécnica</em> na <a href="https://etecribeiraopreto.com.br/" target="_blank" rel="external">ETEC José Martimiano da Silva</a>, e nas horas vagas estudo desenvolvimento web por conta própria!
+                </p>
+            </div>
+            <div id="div_foto">
+                <img id="foto" src="img/foto.png" alt="Foto do leo">
+            </div>
+            
         </div>
+        <hr>
         <div id="div_tecnologias">
             <h1 id="tecnologias_title">
                 Tecnologias
             </h1>
-            <p id="tecnologias_">
-                Em meus estudos me deparei com diversas tecnologias,sendo algumas delas:
+            <p id="tecnologias_text">
+                Em meus estudos me deparei com diversas tecnologias, sendo elas:
             </p>
-            <p>
-                <img src="img/logo_html.png" alt="logo html5">
-                <img src="img/logo_css.png" alt="logo css3">
-                <img src="img/logo_javascript.png" alt="logo logo_javascript">
-                <img src="img/logo_python.png" alt="logo python">
-                <img src="img/logo_cplus.png" alt="logo c++">
+            <p id="tecnologias_images">
+                <img src="img/logo_html.png" alt="logo html5" class="logos">
+                <img src="img/logo_css.png" alt="logo css3" class="logos">
+                <img src="img/logo_javascript.png" alt="logo logo_javascript" class="logos">
+                <img src="img/logo_python.png" alt="logo python" class="logos">
+                <img src="img/logo_cplus.png" alt="logo c++" class="logos">
             </p>
         </div>
     </section>
